# ai-model-quality-framework

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  monitoring.yml
configs/: data.yaml  data_ci.yaml  eval.yaml  eval_ci.yaml  model_v1.yaml  model_v2.yaml  monitoring.yaml
data/raw/sample/: fake.csv  true.csv
docs/: README.md  architecture.md  ci-cd.md  model-card-v1.md  model-card-v2.md  monitoring.md  risks-and-mitigations.md  testing-strategy.md
scripts/: ingest_isot.py  run_api.py  run_drift_report.py  run_prediction_drift.py  train_v1.py  train_v2.py
src/ai_model_quality_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/fakenews/data/: ingest_isot.py  validate.py
src/fakenews/evaluation/: gates.py
src/fakenews/models/: train_v1.py  train_v2.py
src/fakenews/monitoring/: drift.py  prediction_drift.py
src/fakenews/serving/: api.py
tests/e2e/: test_api_contract.py  test_api_robustness.py
tests/integration/: test_v1_regression_guard.py
tests/unit/: test_ci_ingestion_smoke.py  test_data_validation_contract.py  test_drift_detection.py  test_eval_gates.py  test_isot_ingestion.py  test_prediction_drift.py
